# points-belote

./: .gitignore  README.md  belote.py  debug_detections.py  detector.py  export_model.py  pyproject.toml  stability.py
.github/workflows/: deploy.ml
docs/: app.js  detector.js  generate_sounds.py  style.css  sw.js
ios/: BeloteCounterApp.swift  BeloteGame.swift  CardDetector.swift  ContentView.swift  README.md  SETUP.md  export_coreml.py  generate_sounds.py
ios/BeloteCounter/BeloteCounter/: BeloteGame.swift  CameraView.swift  CardDetector.swift  ContentView.swift  LaunchScreen.storyboard  LaunchScreen.swift
ios/BeloteCounter/BeloteCounter.xcodeproj/: project.pbxproj
ios/BeloteCounter/BeloteCounter.xcodeproj/project.xcworkspace/xcuserdata/jstitelet.xcuserdatad/: UserInterfaceState.xcuserstate
ios/BeloteCounter/BeloteCounter/Assets.xcassets/GameTableBackground.imageset/: Contents.json
ios/BeloteCounter/BeloteCounter/PlayingCardsModel.mlpackage/: Manifest.json
ios/BeloteCounter/BeloteCounter/PlayingCardsModel.mlpackage/Data/com.apple.CoreML/: model.mlmodel
iphone/: README.md  detector.js  export_model.py
python/: README.md  display.py  main.py  pyproject.toml
web/: README.md  app.js  index.html  manifest.json
