[project]
name = "points-belote"
version = "0.1.0"
description = "Count belote points using AI vision"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "coremltools>=9.0",
    "huggingface-hub>=1.16.1",
    "onnx>=1.21.0",
    "onnxruntime>=1.26.0",
    "onnxslim>=0.1.94",
    "opencv-python>=4.13.0.92",
    "ultralytics>=8.4.54",
]
